ready for profile

--- a/test/makefile
+++ b/test/makefile
@@ -1,5 +1,5 @@
 CXX = g++
-CXXFLAGS = -std=c++11 -O3 -mtune=native -Wall -mavx2
+CXXFLAGS = -std=c++11 -O3 -mtune=native -Wall -mavx2 -lprofiler -ltcmalloc
 SRCS = main.cpp\
 	
 
