--- a/integrationTest/makefile
+++ b/integrationTest/makefile
@@ -1,12 +1,12 @@
 CXX = g++
-CXXFLAGS = -std=c++11 -O3 -mtune=native -Wall -mavx2
+CXXFLAGS = -std=c++11 -O3  -Wall -mavx
 SRCS = main.cpp\
 	
 
 OBJS = $(SRCS:.cpp=.o)
 
 nbody : $(OBJS)
-	$(CXX) -std=c++11 -o SpaceX $(OBJS)
+	$(CXX) -std=c++11 -mavx -o SpaceHub $(OBJS)
 
 $(OBJS) : $(INCL)
 .PHONY : clean	
