--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(src/particle_system)
 include_directories(src/ode_iterator)
 include_directories(src/integrator)
 include_directories(src/interaction)
-include_directories(src/init_creator)
+include_directories(src/orbits)
 
 add_subdirectory(./googletest)
 include_directories(./googletest/googletest/include)
@@ -29,8 +29,7 @@ set(TMP_HEADER_FILES
         src/solver.h
         src/spaceHub.h
         src/type_class.h
-        src/init_creator/init_file_creator.h
-        src/init_creator/orbits.h
+        src/orbits/orbits.h
         src/integrator/symplectic/symplectic2th.h
         src/integrator/symplectic/symplectic4th.h
         src/integrator/symplectic/symplectic6th.h
@@ -59,7 +58,7 @@ set(SOURCE_FILES
         test/unit_test/test_3d_vector.cpp
         test/unit_test/test_simple_math.cpp
         test/unit_test/test_particle.cpp
-        test/unit_test/test_chain_particle.cpp src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/EoM.h)
+        test/unit_test/test_chain_particle.cpp src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/EoM.h src/particle.h)
 set(REGRESSION_TEST
         test/regression_test/simple_test.cpp)
 add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES} ${REGRESSION_TEST})
