--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(TMP_HEADER_FILES
         src/kahan_number.h
         src/macros.h
         src/own_math.h
-        src/particle_system.h
+        src/particle_system/base-system.h
         src/point-particle.h
         src/solver.h
         src/spaceHub.h
@@ -44,8 +44,6 @@ set(TMP_HEADER_FILES
         src/ode_iterator/const_iterator.h
         src/ode_iterator/IAS15.h
         src/particle_system/chain.h
-        src/particle_system/chain_particles.h
-        src/particle_system/GAR_system.h
         src/particle_system/regu_system.h
         src/tools/timer.h
         src/vector/vector3.h
@@ -56,7 +54,7 @@ set(SOURCE_FILES
         test/unit_test/main.cpp
         test/unit_test/test_3d_vector.cpp
         test/unit_test/test_simple_math.cpp
-        src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/EoM.h src/config-reader.h)
+        src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/EoM.h src/config-reader.h src/particle-system.h)
 set(REGRESSION_TEST
         test/regression_test/simple_test.cpp)
 add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES} ${REGRESSION_TEST})
