constrain basic container to std::vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(src/)
 include_directories(src/vector)
 include_directories(src/tools)
-include_directories(src/particle_system)
+include_directories(src/particle-system)
 include_directories(src/ode_iterator)
 include_directories(src/integrator)
 include_directories(src/interaction)
@@ -24,7 +24,7 @@ set(TMP_HEADER_FILES
         src/kahan-number.h
         src/macros.h
         src/own-math.h
-        src/particle_system/base-system.h
+        src/particle-system/base-system.h
         src/point-particle.h
         src/solver.h
         src/spaceHub.h
@@ -40,8 +40,8 @@ set(TMP_HEADER_FILES
         src/ode_iterator/BSIterator_impl0.h
         src/ode_iterator/const_iterator.h
         src/ode_iterator/IAS15.h
-        src/particle_system/chain.h
-        src/particle_system/regu-system.h
+        src/particle-system/chain.h
+        src/particle-system/regu-system.h
         src/tools/timer.h
         src/vector/vector3.h
         src/vector/vector3d.h
@@ -51,7 +51,7 @@ set(SOURCE_FILES
         test/unit_test/main.cpp
         test/unit_test/test_3d_vector.cpp
         test/unit_test/test_simple_math.cpp
-        src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/interaction.h src/config-reader.h src/particle-system.h src/interaction/newtonian.h src/particle_system/chain-system.h)
+        src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/interaction.h src/config-reader.h src/particle-system.h src/interaction/newtonian.h src/particle-system/chain-system.h)
 set(REGRESSION_TEST
         test/regression_test/simple_test.cpp)
 add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES} ${REGRESSION_TEST})
