--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(src/)
 include_directories(src/vector)
 include_directories(src/tools)
 include_directories(src/particle-system)
-include_directories(src/ode_iterator)
+include_directories(src/ode-iterator)
 include_directories(src/integrator)
 include_directories(src/interaction)
 include_directories(src/orbits)
@@ -19,7 +19,7 @@ link_directories(./googletest/googlemock/include)
 
 set(TMP_HEADER_FILES
         src/args-callback/callbacks.h
-        src/core-computation.h
+        src/core-computation.tpp
         src/dev-tools.h
         src/kahan-number.h
         src/macros.h
@@ -32,10 +32,10 @@ set(TMP_HEADER_FILES
         src/orbits/orbits.h
         src/integrator/symplectic/symplectic-integrator.tpp
         src/integrator/Gauss-Dadau.h
-        src/ode_iterator/BSIterator.h
-        src/ode_iterator/BSIterator_impl0.h
-        src/ode_iterator/const-iterator.tpp
-        src/ode_iterator/IAS15.h
+        src/ode-iterator/BSIterator.h
+        src/ode-iterator/BSIterator_impl0.h
+        src/ode-iterator/const-iterator.tpp
+        src/ode-iterator/IAS15.h
         src/particle-system/chain.tpp
         src/particle-system/regu-system.tpp
         src/tools/timer.h
@@ -47,7 +47,7 @@ set(SOURCE_FILES
         test/unit_test/main.cpp
         test/unit_test/test_3d_vector.cpp
         test/unit_test/test_simple_math.cpp
-        src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/interaction.h src/tools/config-reader.h src/particle-system.h src/interaction/newtonian.h src/particle-system/chain-system.tpp src/particle-system/archain.tpp src/integrator/symplectic/symplectic-integrator.h src/ode_iterator/ode-iterator.h src/particle/point-particle.tpp src/particle/finite-size.tpp)
+        src/lazy-evaluation/lazy_expr.h src/lazy-evaluation/lazy_array.h src/lazy-evaluation/slice.h src/lazy-evaluation/mkl-array.h src/multi-thread/multi-thread.h src/multi-thread/thread_pool.h src/multi-thread/concurrent-queue.h src/multi-thread/ciostream.h src/interaction.h src/tools/config-reader.tpp src/particle-system.h src/interaction/newtonian.h src/particle-system/chain-system.tpp src/particle-system/archain.tpp src/integrator/symplectic/symplectic-integrator.h src/ode-iterator/ode-iterator.h src/particle/point-particle.tpp src/particle/finite-size.tpp src/tools/auto-name.tpp src/rand-generator.tpp)
 set(REGRESSION_TEST
         test/regression_test/simple_test.cpp)
 add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES} ${REGRESSION_TEST})
