--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,10 +81,10 @@ set(REGRESSION_TEST
 
 set(KOZAI_TEST
         test/regression_test/kozai.cpp)
-#add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES} ${REGRESSION_TEST})
-#target_link_libraries(SpaceHub_unit_test gtest gtest_main)
-#target_link_libraries(SpaceHub_unit_test gmock gmock_main)
+add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES})
+target_link_libraries(SpaceHub_unit_test gtest gtest_main)
+target_link_libraries(SpaceHub_unit_test gmock gmock_main)
+
 add_executable(SpaceHub_kozai_test ${TMP_HEADER_FILES} ${KOZAI_TEST})
 
 add_executable(SpaceHub_reg_test ${TMP_HEADER_FILES} ${REGRESSION_TEST})
-
