--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(TMP_HEADER_FILES
         src/multi-thread/ciostream.hpp
 
         src/ode-iterator/ode-iterator.hpp
-        src/ode-iterator/BS-iterator_bk.hpp
+        #src/ode-iterator/BS-iterator_bk.hpp
         src/ode-iterator/Burlish-Stoer.hpp
         src/ode-iterator/const-iterator.hpp
         src/ode-iterator/IAS15.h
