change unite test frame from gtest to catch2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++17 -O3")
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(./googletest)
-include_directories(./googletest/googletest/include)
-link_directories(./googletest/googlemock/include)
+#add_subdirectory(./googletest)
+#include_directories(./googletest/googletest/include)
+#link_directories(./googletest/googlemock/include)
 
 set(TMP_HEADER_FILES
         src/args-callback/callbacks.hpp
@@ -75,13 +75,18 @@ set(TMP_HEADER_FILES
         src/ode-iterator/error-checker/worst-offender.hpp
         src/ode-iterator/error-checker/RMS.hpp
         src/ode-iterator/step-controller/stepsize-controller.hpp
-        src/ode-iterator/step-controller/PID-controller.hpp src/scattering/cross-section.hpp src/integrator/integrator.hpp src/ode-iterator/error-checker/IAS15-error.hpp src/orbits/particle-manip.hpp src/IO.hpp src/args-callback/collision.hpp test/catch.hpp)
+        src/ode-iterator/step-controller/PID-controller.hpp
+        src/scattering/cross-section.hpp
+        src/integrator/integrator.hpp
+        src/ode-iterator/error-checker/IAS15-error.hpp
+        src/orbits/particle-manip.hpp
+        src/IO.hpp
+        src/args-callback/collision.hpp
+        test/catch.hpp)
 
-set(SOURCE_FILES
-        test/unit_test/main.cpp
-        test/unit_test/test_simple_math.cpp
-        test/unit_test/test_chain.cpp
-        test/unit_test/test_particle.cpp test/unit_test/test_coords.cpp test/unit_test/utest_vector3.cpp test/unit_test/utest_math.cpp)
+set(UNIT_TEST
+        test/unit_test/utest_vector3.cpp
+        test/unit_test/utest_math.cpp test/unit_test/utest_coord.cpp test/unit_test/utest_point-particle.cpp test/unit_test/utest_finite-particle.cpp)
 
 set(TWOBODY_TEST
         test/regression_test/two-body-test.cpp
@@ -95,9 +100,9 @@ set(KOZAI_TEST
         test/regression_test/kozai.cpp)
 
 
-add_executable(SpaceHub_unit_test ${SOURCE_FILES} ${TMP_HEADER_FILES})
-target_link_libraries(SpaceHub_unit_test gtest gtest_main)
-target_link_libraries(SpaceHub_unit_test gmock gmock_main)
+add_executable(SpaceHub_unit_test ${UNIT_TEST} ${TMP_HEADER_FILES})
+#target_link_libraries(SpaceHub_unit_test gtest gtest_main)
+#target_link_libraries(SpaceHub_unit_test gmock gmock_main)
 
 
 add_executable(SpaceHub_kozai_test ${TMP_HEADER_FILES} ${KOZAI_TEST})
