--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,9 @@ set(KOZAI_TEST
 set(PN_P_TEST
         test/regression_test/rtest_PN_precession.cpp)
 
+set(PN_R_TEST
+        test/regression_test/rtest_PN_radiation.cpp)
+
 set(IMPROVEMENT_TEST
         test/regression_test/rtest_improvement.cpp)
 
@@ -105,5 +108,7 @@ add_executable(SpaceHub_twobody_test ${TMP_HEADER_FILES} ${TWOBODY_TEST})
 add_executable(SpaceHub_improve_test ${TMP_HEADER_FILES} ${IMPROVEMENT_TEST})
 
 add_executable(SpaceHub_PN_p_test ${TMP_HEADER_FILES} ${PN_P_TEST})
+
+add_executable(SpaceHub_PN_r_test ${TMP_HEADER_FILES} ${PN_R_TEST})
 
 add_executable(SpaceHub_solar_test ${TMP_HEADER_FILES} ${SOLAR_TEST} test/regression_test/rtest_samples.hpp)
